implementando fluxo de comunicacao com a api para a atualizacao de medicamentos

--- a/apps/frontend/assets/sass/main.scss
+++ b/apps/frontend/assets/sass/main.scss
@@ -1,5 +1,9 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-
+#feedback {
+  > div {
+    display: none;
+  }
+}
 .historico {
   color: #bbb;
   .lista-historico {
