inserindo logo e campo de busca

--- a/apps/frontend/assets/sass/main.scss
+++ b/apps/frontend/assets/sass/main.scss
@@ -1,4 +1,9 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+
+header {
+  margin: 30px 0;
+}
+
 #feedback {
   > div {
     display: none;
